# remote_control_with_zenoh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pixi.toml
config/: client.json  client.json5  router.json  router.json5
src/: z_pub.c  z_sub.c  z_sub_tsl.c
